History
=======

Version 0.7.7 - Unreleased
--------------------------

Version 0.7.6 - 2008-11-05
--------------------------

- German translation has been updated.
  [saily]

- Used i18ndude to find all untranslated msgid's. There were some updates in 
  collective.dancing queue-button-naming, so all guy's please help updating 
  collective.dancing's po files.  [saily]

- Fixed a bug where when sending a preview we were incorrectly setting
  the ``cue`` of the subscription that the preview is sent to. [nouri]

- Fix #264990: When sending out a newsletter from a content item
  manually, we no longer assemble all message in the course of the
  browser request.  Instead, we schedule a job that's executed
  asynchronously on ``tick_and_dispatch`` time. [nouri]

Version 0.7.5 - 2008-10-27
--------------------------

- Move file locking from queue dispatch to the ``tick_and_dispatch``
  browser view.  This is to make sure that we don't put duplicates
  into the queue.  This is because the underlying queue implementation
  will actually work against us here by allowing simultaneous adds in
  parallel ZODB- writes. [nouri]

- Fix #289779: Strip whitespace from e-mail addresses. [nouri]

- Added ``encoding`` attribute on the ``HTMLComposer`` class to make
  it possible to either subclass and provide a different default
  encoding, or set a persistent attribute. [malthe]

- Fix #280338: Images in header and footer text were sent with
  relative URLs. [nouri]

- It's now possible to filter channels from the sendnewsletter view.
  Simple by setting channel.sendable=False.
  [tmog]

- Fixed an issue with installing collective.dancing from python.
  The event-listener registering ISalt on creation of a new tool
  no longer depends upon having a request. [tmog]
  
- zope.conf configuration with Virtual Host added in 
  documentation [macadames]  

Version 0.7.4 - 2008-09-19
--------------------------

- Fix an issue where confirming pending subscriptions by visiting the "My 